--- a/foo/static/index.html
+++ b/foo/static/index.html
@@ -1,4 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./index-css.css" />
+    <script src="./index-js.js"></script>
+  </head>
   <body>
     <h1>Welcome to Foo Index</h1>
   </body>
